# medlib

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/: compliance.h  temperature.h
unittest/: CMakeLists.txt  compliance_test.cpp  main.cpp  temperature_test.cpp
